test/corpus/L1/negative/unexpected-token-assign.st
"---
kind: negative
section: error.unexpected-token
codes: E_UNEXPECTED_TOKEN
note: `:=` IS the valid assignment operator (a := b es positivo); aquí el TARGET `3` es un literal no asignable (CORR-2/DEV-010)
---"
3 := 4
